# WikigameSolver

./: .env  .gitignore  Cargo.toml  DATA_PREP.md  README.md  bfs_times.csv  sinks.txt  sources.txt
.sqlx/: query-5a0e7464a2eccd4d3543a7f8d3b62e314031f6cbc371dd1111b422875b746385.json
logs/: app.log.2025-08-24  error.log.2025-08-24  error.log.2025-08-25  error.log.2025-08-26  error.log.2025-08-27  error.log.2025-08-28  error.log.2025-08-29  error.log.2025-08-30  error.log.2025-08-31  error.log.2025-09-05
src/: config.rs  leaderboard.rs  linktarget_parser.rs  main  main copy.rs  main.rs  models.rs  page_parser.rs  pagelinks_parser.rs  redirect_parser.rs  search.rs  state.rs  util.rs
src/auth/: google.rs  mod.rs
src/builders/: linktargets.rs  mod.rs  page_maps.rs  pagelinks.rs  redirect_targets.rs
src/graph/: csr_graph.rs  mod.rs
src/mmap_structs/: csr_graph_mmap.rs  dense_id_to_orig.rs  dense_id_to_title.rs  mod.rs  orig_to_dense_id.rs  redirect_targets_dense.rs  redirects_passed.rs  title_to_dense_id.rs
src/parsers/: linktarget_parser.rs  mod.rs  page_parser.rs  pagelinks_parser copy.rs  pagelinks_parser.rs  redirect_parser.rs
src/routes/: auth.rs  leaderboard.rs  mod.rs  search.rs  user.rs
