[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.17", features = [
    "zlib-rs",
], default-features = false }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
indicatif = { version = "*" }
rustc-hash = "2.1.1"
bitcode = "=0.6.6"
rayon = "1.11.0"
# in pagelinks_parser.rs
atoi = "2.0.0"
