[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.17", features = [
    "zlib-rs",
], default-features = false }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
indicatif = { version = "*" }
rustc-hash = "2.1.1"
bitcode = "=0.6.6"
memmap2 = "0.9.7"
bytemuck = "1.23.2"
# in pagelinks_parser.rs
atoi = "2.0.0"

rand = "0.9.2"
clap = { version = "4.5.45", features = ["derive"] }

axum = { version = "0.8.4", features = ["macros"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors", "compression-full"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
